<resources>
    <string name="app_name">Brainfuck</string>
    <string name="button">Ausführen</string>
    <string name="buttonMoveRight">&gt;</string>
    <string name="buttonMoveLeft">&lt;</string>
    <string name="buttonIncrement">+</string>
    <string name="buttonDecrement">-</string>
    <string name="buttonLoopStart">[</string>
    <string name="buttonLoopEnd">]</string>
    <string name="buttonOutput">.</string>
    <string name="buttonKomma">,</string>
    <string name="codeHint">Code</string>
    <string name="inputHint">Input</string>
    <string name="textviewErgebnis">Ergebnis:</string>

</resources>
