<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/inputHint"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/codeHint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/buttonShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLoopStart"
        android:text="@string/button" />

    <Button
        android:id="@+id/buttonMoveRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/code"
        android:text="@string/buttonMoveRight" />

    <Button
        android:id="@+id/buttonMoveLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/code"
        android:layout_toRightOf="@id/buttonMoveRight"
        android:text="@string/buttonMoveLeft"
        android:layout_toEndOf="@id/buttonMoveRight" />

    <Button
        android:id="@+id/buttonIncrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/code"
        android:layout_toRightOf="@id/buttonMoveLeft"
        android:text="@string/buttonIncrement"
        android:layout_toEndOf="@id/buttonMoveLeft" />

    <Button
        android:id="@+id/buttonDecrease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/code"
        android:layout_toRightOf="@id/buttonIncrease"
        android:text="@string/buttonDecrement"
        android:layout_toEndOf="@id/buttonIncrease" />

    <Button
        android:id="@+id/buttonLoopStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonMoveRight"
        android:text="@string/buttonLoopStart" />

    <Button
        android:id="@+id/buttonLoopEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonMoveLeft"
        android:layout_toRightOf="@id/buttonLoopStart"
        android:text="@string/buttonLoopEnd"
        android:layout_toEndOf="@id/buttonLoopStart" />

    <Button
        android:id="@+id/buttonOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonIncrease"
        android:layout_toRightOf="@id/buttonLoopEnd"
        android:text="@string/buttonOutput"
        android:layout_toEndOf="@id/buttonLoopEnd" />

    <Button
        android:id="@+id/buttonKomma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonDecrease"
        android:layout_toRightOf="@id/buttonOutput"
        android:text="@string/buttonKomma"
        android:layout_toEndOf="@id/buttonOutput" />

    <TextView
        android:id="@+id/textViewOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewErgebnis"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textViewErgebnis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonShow"
        android:text="@string/textviewErgebnis"
        android:textSize="24sp"
        android:textStyle="bold" />

</RelativeLayout>